tests/transpiler/x/java/list_nested_assign.java
public class Main {
    static int[] matrix = new int[]{new int[]{1, 2}, new int[]{3, 4}};
    public static void main(String[] args) {
        System.out.println(matrix[1][0]);
    }
}
